fixed bug on login view

--- a/src/Cms/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Cms/UserBundle/Resources/views/Security/login.html.twig
@@ -4,7 +4,7 @@
     {{ parent() }}
     {% stylesheets
         '@CmsUserBundle/Resources/public/css/login.css'
-        filter='cssrewrite,?yui_css' %}
+        filter='cssrewrite' %}
         <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
 {% endblock %}
