--- a/src/Cms/CoreBundle/Resources/views/Theme/wizardComplete.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Theme/wizardComplete.html.twig
@@ -39,7 +39,7 @@
                             <div class="span2 progress-label" id="primary-progress-label">
                                 <span class="percent-complete">45%</span> Complete
                             </div>
-                            <a href="#" class="close">&times;</a>
+                            <a href="{{ path('cms_core.themeOrg_readAll', {'themeOrgId':theme.id}) }}" class="close">&times;</a>
                         </div>
                     </div>
                     <div class="row-fluid">
