updated js and css to reflect changes in filepicker public url resolution

--- a/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
@@ -3,6 +3,9 @@
     font-size: 15px;
     margin-bottom: 0px;
 }
+.quick-action-container {
+    min-height: 20px;
+}
 @media (min-width: 767px) {
     .edit, .delete {
         max-width: 79px;
