--- a/src/Cms/CoreBundle/Resources/views/ContentManager/static.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentManager/static.html.twig
@@ -49,7 +49,7 @@
                 {{ node.created|date('F j, Y ') }}
             </td>
             <td>
-                <a href="{{ path('cms_core.content_manager_wizard_static', {'siteId':site.id, 'contentTypeId':'null', 'contentTypeName':node.contentTypeName}) }}" class="btn btn-info">Edit</a>
+                <a href="{{ path('cms_core.node_read', {'siteId':site.id, 'id':node.id}) }}" class="btn btn-info">Edit</a>
             </td>
             <td>
                 <button class="btn btn-danger content-type-delete" data-content-type-name="{{ node.contentTypeName }}" data-node-id={{ node.id }}>Trash</button>
