--- a/src/Cms/CoreBundle/Resources/views/App/components.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/App/components.html.twig
@@ -18,12 +18,10 @@
 {% block notices %}
     {% if notices is not empty %}
         <aside>
-            {% for notice in notices  %}
-                <div class="alert alert-info">
-                    <button type="button" class="close" data-dismiss="alert" style='color: white'>&times;</button>
-                    <i class="icon-bullhorn" style="margin-right: 5px;"></i> {{ notice }}
-                </div>
-            {% endfor %}
+            <div class="alert alert-info">
+                <button type="button" class="close" data-dismiss="alert" style='color: white'>&times;</button>
+                <i class="icon-bullhorn" style="margin-right: 5px;"></i> {{ notices[0] }}
+            </div>
         </aside>
     {% endif %}
 {% endblock %}
