changed pipe color from red to orange

--- a/src/Cms/CoreBundle/Resources/public/css/welcome/about.css
+++ b/src/Cms/CoreBundle/Resources/public/css/welcome/about.css
@@ -45,7 +45,7 @@ h3 {
 }
 .pipe-filler {
     margin: 0px auto;
-    background-color: #C0392B;
+    background-color: #D35400;
     height: 50px;
 }
 .pipe-filler-small {
