added thickness to pipes

--- a/src/Cms/CoreBundle/Resources/views/Welcome/about.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/about.html.twig
@@ -18,6 +18,10 @@
     {% endjavascripts %}
 {% endblock %}
 
+{% block title %}
+    About {{  parent() }}
+{% endblock %}
+
 {% block body %}
     <div id='topnav-container'>
         <div class="container">
