--- a/src/Cms/CoreBundle/Resources/public/css/welcome/about.css
+++ b/src/Cms/CoreBundle/Resources/public/css/welcome/about.css
@@ -27,7 +27,7 @@ h3 {
     border-top: 3px solid #ffffff;
     border-bottom: 3px solid #ffffff;
     margin: 80px auto;
-    background-color: white;
+    background-color: #f5f5f5;
     height: 50px;
     width: 80%;
     border-radius: 3px;
